--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = ["HiPeople21 <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Flask = "^2.0.1"
+beautifulsoup4 = "^4.9.3"
+requests = "^2.26.0"
+lxml = "^4.6.3"
 
 [tool.poetry.dev-dependencies]
 
